Replaced the mutable HashSet initialization of NUMERIC_FIELD_TYPES with Set.of(...).